Azure-K8S-On-Arc/k8s/node-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: web-apps
spec:
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: node-api
          image: ghcr.io/goncalvesj/k8s-arc-node-api:latest
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
              ephemeral-storage: '1Gi'
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
          # livenessProbe:
          #   tcpSocket:
          #     port: 8080
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: web-apps
spec:
  selector:
    app: node-api
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 3000
