Azure-K8S-On-Arc/k8s/python-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
spec:
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:      
      containers:
        - name: python-api
          image: jprgacr.azurecr.io/python-api:dev
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 60
          # livenessProbe:
          #   tcpSocket:
          #     port: 8080 
          #   initialDelaySeconds: 15 
          #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: python-api
spec:
  selector:
    app: python-api
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8000
